resource_manager/cloud_formation_templates/NetworkLoadBalancerTemplate.yml
#
# Copyright 2020 Amazon.com, Inc. or its affiliates. All Rights Reserved.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy of this
# software and associated documentation files (the "Software"), to deal in the Software
# without restriction, including without limitation the rights to use, copy, modify,
# merge, publish, distribute, sublicense, and/or sell copies of the Software, and to
# permit persons to whom the Software is furnished to do so.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
# INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
# PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
# HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
# OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
# SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
#
---
AWSTemplateFormatVersion: 2010-09-09
Description: Test stack for network load-balancer
Outputs:
  NetworkELBArn:
    Description: Network Load Balancer ARN
    Value: !Ref  NetworkELB
  NetworkELBUrl:
    Description: The Network Elastic Load Balancer DNS Name
    Value: !GetAtt NetworkELB.DNSName
  NetworkELBFullName:
    Description: The Network Elastic Load Balancer Key For Alarm Setup
    Value: !GetAtt NetworkELB.LoadBalancerFullName
  ProxyLambdaArn:
    Description: The ARN for Lambda function which is used to trigger requests to private ELB endpoint
    Value: !GetAtt ProxyLambdaFunction.Arn
  TargetGroup:
    Description: TargetGroup name
    Value: !GetAtt NLBTargetGroup.TargetGroupFullName
  TargetGroupArn:
    Description: TargetGroup Arn
    Value: !Ref NLBTargetGroup
Parameters:
  VPC:
    Type: String
    Description: VPC ID
  VPCCidr:
    Type: String
    Description: VPC Cidr
  Subnet1:
    Type: String
    Description: Subnet ID
  Subnet2:
    Type: String
    Description: Subnet ID
  EC2Subnet:
    Type: String
    Default: ""
  InstanceType:
    Type: String
    Default: t3.small
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
  ListenPort:
    Type: String
    Default: 80
  SSLCertificateBody:
    Type: String
    Default: |
      -----BEGIN CERTIFICATE-----
      MIIDBjCCAe4CCQC/gsk8A/TgUjANBgkqhkiG9w0BAQsFADBFMQswCQYDVQQGEwJV
[...]
      10CZ+4fEyDBSUQ==
      -----END CERTIFICATE-----

  SSLCertificatePrivateKey:
    Type: String
    Default: |
      -----BEGIN PRIVATE KEY-----
      MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQDPJ6yQ7Sx3Exb5
[...]
      KWeMzqbYKrW7t9ud74ONZ4Uu
      -----END PRIVATE KEY-----

Resources:
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Access to the ec2 hosts
      VpcId: !Ref 'VPC'
      SecurityGroupIngress:
        - IpProtocol: icmp
          FromPort: 0
          ToPort: 0
          CidrIp: !Ref VPCCidr
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref VPCCidr
        - IpProtocol: tcp
          FromPort: !Ref ListenPort
          ToPort: !Ref ListenPort
          CidrIp: !Ref VPCCidr
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VPCCidr
      SecurityGroupEgress:
        - CidrIp: "0.0.0.0/0"
          IpProtocol: "-1"
          FromPort: 0
          ToPort: 65535

  NetworkELB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      IpAddressType: ipv4
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
      Scheme: internal
      SubnetMappings:
        - SubnetId: !Ref Subnet1
      Type: network

  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref NLBTargetGroup
      LoadBalancerArn: !Ref NetworkELB
      Port: !Ref ListenPort
      Protocol: TCP

  SSLCertificate:
    Type: AWS::IAM::ServerCertificate
    DependsOn: NetworkELB
    Properties:
      CertificateBody: !Ref SSLCertificateBody
      PrivateKey: !Ref SSLCertificatePrivateKey
      ServerCertificateName: !Join
        - "-"
        - - "ServerCertificate-Digito"
          - !Ref "AWS::Region"
          - !Ref "AWS::AccountId"
          - !Select
            - 0
            - !Split
              - "-"
              - !Select
                - 2
                - !Split
                  - "/"
                  - !Ref "AWS::StackId"
  Listener443:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref NLBTargetGroup
      LoadBalancerArn: !Ref NetworkELB
      SslPolicy: "ELBSecurityPolicy-2016-08"
      Certificates:
        -
          CertificateArn: !GetAtt SSLCertificate.Arn
      Port: 443
      Protocol: TLS

  NLBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckEnabled: true
      HealthCheckIntervalSeconds: 10
      HealthCheckPort: !Ref ListenPort
      HealthCheckProtocol: TCP
      HealthCheckTimeoutSeconds: 10
      HealthyThresholdCount: 2
      Port: !Ref ListenPort
      Protocol: TCP
      TargetGroupAttributes:
        - Key: stickiness.enabled
          Value: "true"
      Targets:
        - Id:
            Ref: AmazonLinuxInstance
          Port: !Ref ListenPort
        - Id:
            Ref: AmazonLinuxInstance
          Port: 443
      TargetType: instance
      UnhealthyThresholdCount: 2
      VpcId: !Ref VPC

  AmazonLinuxInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceInitiatedShutdownBehavior: stop
      InstanceType: !Ref InstanceType
      Monitoring: true
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: '0'
          GroupSet:
            - !Ref EC2SecurityGroup
          SubnetId: !Ref EC2Subnet
      Tenancy: default
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          cd /tmp
          yum update -y
          yum install -y httpd
          yum install -y https://s3.${AWS::Region}.amazonaws.com/amazon-ssm-${AWS::Region}/latest/linux_amd64/amazon-ssm-agent.rpm
          echo "Healthy" > /var/www/html/index.html
          echo "Listen 443" >> /etc/httpd/conf/httpd.conf
          service httpd start
          /opt/aws/bin/cfn-signal \
            -e $? \
            --stack ${AWS::StackName} \
            --resource AmazonLinuxInstance \
            --region ${AWS::Region}

  ProxyLambdaSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Proxy Lambda security group"
      GroupName: !Join
        - "-"
        - - "ProxyLambdaSG"
          - !Select
            - 0
            - !Split
              - "-"
              - !Select
                - 2
                - !Split
                  - "/"
                  - !Ref "AWS::StackId"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: !Ref VPCCidr
      SecurityGroupEgress:
        - CidrIp: "0.0.0.0/0"
          IpProtocol: "-1"
          FromPort: 0
          ToPort: 65535

  LambdaRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - lambda.amazonaws.com
            Action:
              - sts:AssumeRole
      Description: Lambda Role
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole

  ProxyLambdaFunction:
    Type: AWS::Lambda::Function
    Properties:
      Handler: index.lambda_handler
      Role: !GetAtt LambdaRole.Arn
      Runtime: python3.8
      Timeout: 900
      ReservedConcurrentExecutions: 5
      VpcConfig:
        SubnetIds:
          - !Ref Subnet2
        SecurityGroupIds:
          - !Ref ProxyLambdaSG
      Environment:
        Variables:
          Host: !GetAtt NetworkELB.DNSName
      Code:
        ZipFile: >
          import http.client

          import logging

          from socket import gethostbyname

          from time import sleep

          from os import getenv

          format = '[%(asctime)s] %(levelname)s %(message)s'

          logging.basicConfig(format=format, level=logging.INFO, datefmt="%H:%M:%S")

          log = logging.getLogger()

          log.setLevel(logging.DEBUG)

          def lambda_handler(event, context):
            host = event['host'] if 'host' in event else getenv('Host', 'localhost')
            path = event['path'] if 'path' in event else getenv('Path', '/')
            schema = event['schema'] if 'schema' in event else getenv('Schema', 'http')
            port = int(event['port']) if 'port' in event else None
            request_interval = event['request_interval'] if 'request_interval' in event else getenv('RequestInterval', 10)
            request_count = event['request_count'] if 'request_count' in event else getenv('RequestCount', 1)
            request_count = int(request_count)
            request_interval = int(request_interval)
            method = 'GET'

            latest_status = ''
            latest_body = ''

            log.debug(f'Ip: {gethostbyname(host)}, Target: {method} {schema}://{host}{path} Port: {port}')
            log.debug(f'Count: {request_count}, Interval: {request_interval}')

            while request_count > 0:
                try:
                    if schema == 'http':
                        connection = http.client.HTTPConnection(host, timeout=request_interval, port=port)
                    elif schema == 'https':
                        connection = http.client.HTTPSConnection(host, timeout=request_interval, port=port)
                    else:
                        raise Exception(f'Unknown schema "{schema}"')
                    connection.request(method, path)
                    response = connection.getresponse()
                    log.info(f'Status: {response.status}, Reason: {response.reason}, Body: {response.read()}')
                    latest_status = response.status
                    latest_body = response.read()
                    sleep(request_interval)
                except Exception as e:
                    log.warning(f'Exception: {e}')
                finally:
                    connection.close()
                    request_count -= 1

            return {
                "statusCode": latest_status,
                "headers": {
                    "Content-Type": "text/plain"
                },
                "body": latest_body
            }

  ProxyLambdaVersion:
    Type: AWS::Lambda::Version
    Properties:
      FunctionName: !Ref ProxyLambdaFunction
      Description: v1
